// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DropDownLabel /> renders large size label correctly 1`] = `
.c0 {
  display: block;
  font-size: 14px;
  opacity: 1;
}

<label
  className="c0"
  disabled={false}
  size="large"
>
  label text
</label>
`;

exports[`<DropDownLabel /> renders small disabled label correctly 1`] = `
.c0 {
  display: block;
  font-size: 12px;
  opacity: 0.4;
}

<label
  className="c0"
  disabled={true}
  size="small"
>
  label text
</label>
`;

exports[`<DropDownLabel /> renders small size label correctly 1`] = `
.c0 {
  display: block;
  font-size: 12px;
  opacity: 1;
}

<label
  className="c0"
  disabled={false}
  size="small"
>
  label text
</label>
`;
